fix hide overflow (#538)

--- a/src/app/widgets/widget-tutorial/widget-tutorial.component.scss
+++ b/src/app/widgets/widget-tutorial/widget-tutorial.component.scss
@@ -1,6 +1,7 @@
 .tutorial-container {
   height: 100%;
   padding: 15px;
+  overflow: hidden;
 }
 
 table, th, td {
